--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="Lab01"></div>
+    <div id="Lab02"></div>
+    
 
   </body>
 </html>
