--- a/src/CursoReact/01/react-index.html
+++ b/src/CursoReact/01/react-index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
 
     <!-- Cargat React -->
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react/18.3.1/cjs/react.production.min.js"></script>
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.3.1/cjs/react-dom.production.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.24.7/babel.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
     <title>Curso de React</title>
   </head>
@@ -17,10 +17,13 @@
     
 
     
-    <script>
+    <script type="text/babel">
+    // ==== Código ====
 
-      // ==== Código
-
+      const divRoot = document.querySelector('#root');
+      const nombre = 'José Juan';
+      const h1Tag = <h1> Hola, {nombre} </h1>;
+      ReactDOM.render( h1Tag, divRoot);
 
 
 
