--- a/public/fernandoh.html
+++ b/public/fernandoh.html
@@ -7,11 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
+      content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <title>Curso F.H.</title>
   </head>
   <body>
@@ -19,5 +18,8 @@
       Tienes que tener JavaScript activo para el funcionamiento de esta página.
     </noscript>
     <div id="root"></div>
+
+
+    
   </body>
 </html>
