--- a/public/pildorasi.html
+++ b/public/pildorasi.html
@@ -14,7 +14,9 @@
     <title>Curso P.I.</title>
   </head>
   <body>
-    <noscript>Tienes que tener JavaScript activo para el funcionamiento de esta página.</noscript>
+    <noscript>
+      Tienes que tener JavaScript activo para el funcionamiento de esta página.
+    </noscript>
     <div id="root"></div>
     <div id="galeria"></div>
     <div id="multicomponentes"></div>
