--- a/public/pildorasi.html
+++ b/public/pildorasi.html
@@ -18,8 +18,11 @@
       Tienes que tener JavaScript activo para el funcionamiento de esta página.
     </noscript>
     <div id="root"></div>
+    
     <div id="galeria"></div>
-    <div id="multicomponentes"></div>
+    <div id="multicomp"></div>
+    <div id="video"></div>
+
     
 
   </body>
