--- a/public/pi.html
+++ b/public/pi.html
@@ -17,12 +17,14 @@
     <noscript>
       Tienes que tener JavaScript activo para el funcionamiento de esta página.
     </noscript>
+    <div id="entradas"></div>
     <div id="root"></div>
     
+    <!-- 
     <div id="galeria"></div>
     <div id="multicomp"></div>
     <div id="video"></div>
-
+    -->
     
 
   </body>
